--- a/index.html
+++ b/index.html
@@ -99,11 +99,13 @@
           </div>
           <div class="sidecard-block">
             <h3>Top 3 Opportunities</h3>
+            <div style="text-align: left;">
             <ol>
               <br><li>Build a global revenue engine by unifying SEO, paid, content, and product marketing into one measurable pipeline motion.</li>
               <br><li>Strengthen category leadership through storytelling, customer proof, and founder-led narrative that differentiates ProcurePro from “Word–Excel–Email” status quo.</li>
               <br><li>Scale demand across new markets (UK/Europe) through segmented, regionalised campaigns powered by data, ICP insights, and customer-led content.</li>
             </ol>
+            </div>
           </div>
         </div>
       </div>
