--- a/index.html
+++ b/index.html
@@ -91,11 +91,13 @@
         <div class="hero-sidecard">
           <div class="sidecard-block">
             <h2>Snapshot</h2>
+             <div style="text-align: left;">
             <ul>
               <li><strong>Role:</strong> Global Head of Marketing</li>
               <li><strong>Market:</strong> Australia, UK, and global construction-tech</li>
               <li><strong>Primary Goal:</strong> Build a unified, scalable marketing engine that drives worldwide pipeline, elevates brand leadership, and positions ProcurePro as the category-defining platform.</li>
             </ul>
+             </div>
           </div>
           <div class="sidecard-block">
             <h3>Top 3 Opportunities</h3>
