--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@
           </p>
         </div>
         <div class="contact-actions">
-          <a href="mailto:[your-email]@gmail.com" class="btn primary">
+          <a href="mailto:ajitpalsingh.hmh@gmail.com" class="btn primary">
             Email Me About This Role
           </a>
-          <a href="https://www.linkedin.com/in/[your-handle]" class="btn ghost" target="_blank" rel="noopener">
+          <a href="www.linkedin.com/in/ajitpalsinghcmo" class="btn ghost" target="_blank" rel="noopener">
             View My LinkedIn Profile
           </a>
         </div>
