--- a/index.html
+++ b/index.html
@@ -177,12 +177,14 @@
       <div class="container plan-grid">
         <article class="plan-column">
           <h3>Days 1–30 · Diagnose & Align</h3>
+          <div style="text-align: left;">
           <ul>
             <li>Stakeholder interviews with founders, sales, ops, and product.</li>
             <li>Full funnel + channel audit: SEO, paid, CRM, email, website.</li>
             <li>Define 2–3 core growth metrics and shared dashboard.</li>
             <li>Identify & prioritise 5–7 “quick win” experiments.</li>
           </ul>
+          </div>
           <button class="link-button open-modal" data-modal-id="modal-30">
             Detailed 30-day checklist →
           </button>
@@ -190,12 +192,14 @@
 
         <article class="plan-column">
           <h3>Days 31–60 · Ship & Prove</h3>
+          <div style="text-align: left;">
           <ul>
             <li>Launch priority experiments across traffic, conversion, and retention.</li>
             <li>Implement SEO & content sprints around highest intent terms.</li>
             <li>Refine messaging and offers based on early data.</li>
             <li>Formalise reporting rhythm: weekly sprint reviews, monthly board update.</li>
           </ul>
+          </div>
           <button class="link-button open-modal" data-modal-id="modal-60">
             Detailed 60-day focus →
           </button>
@@ -203,12 +207,14 @@
 
         <article class="plan-column">
           <h3>Days 61–90 · Scale & Systemise</h3>
+          <div style="text-align: left;">
           <ul>
             <li>Double down on winning channels; sunset low performers.</li>
             <li>Document playbooks and workflows (CMO Operating System).</li>
             <li>Propose org design: hiring roadmap, agency/partner structure.</li>
             <li>Present 12-month growth roadmap with scenarios and risks.</li>
           </ul>
+          </div>
           <button class="link-button open-modal" data-modal-id="modal-90">
             Detailed 90-day roadmap →
           </button>
@@ -292,12 +298,14 @@
             I’m a strategist-operator hybrid: comfortable building the growth story in the boardroom, then
             dropping into the trenches with marketing, sales, and product to make it real.
           </p>
+          <div style="text-align: left;">
           <ul class="about-list">
             <li><strong>18+ years</strong> across SEO, digital, B2B, recruitment tech, compliance, and services.</li>
             <li><strong>Hands-on with AI</strong> – building agents, workflows, and content engines, not just “using tools.”</li>
             <li><strong>Operator mindset</strong> – every campaign tied to pipeline, revenue, and margin.</li>
             <li><strong>Leadership</strong> – mentoring teams, aligning cross-functional stakeholders, and telling the story clearly.</li>
           </ul>
+          </div>
           <button class="link-button open-modal" data-modal-id="modal-bio">
             Full story & case highlights →
           </button>
