--- a/index.html
+++ b/index.html
@@ -344,10 +344,13 @@
         <div class="contact-actions">
           <a href="mailto:ajitpalsingh.hmh@gmail.com" class="btn primary">
             Email Me About This Role
-          </a>
-          <a href="www.linkedin.com/in/ajitpalsinghcmo" class="btn ghost" target="_blank" rel="noopener">
-            View My LinkedIn Profile
-          </a>
+          <a href="https://www.linkedin.com/in/ajitpalsinghcmo" 
+   class="btn ghost" 
+   target="_blank" 
+   rel="noopener noreferrer">
+  View My LinkedIn Profile
+</a>
+
         </div>
       </div>
     </section>
