--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
       <button class="modal-close" aria-label="Close modal">×</button>
       <h3>Why This Plan Looks the Way It Does</h3>
       <p>
-        
+<div style="text-align: left;">        
 <p>Built directly around:</p>
 <ul>
 <li>CEO mandate: &ldquo;Build a scalable marketing engine.&rdquo;</li>
@@ -374,7 +374,7 @@
 <li>The role reporting directly to the CEO = strategic + operational hybrid.</li>
 <li>This blueprint aligns to building:<br />Pipeline &rarr; Authority &rarr; Efficiency &rarr; Global Scale</li>
 </ul>
-      </p>
+      </p></div>
     </div>
   </div>
 
@@ -384,6 +384,7 @@
       <h3>Discovery & Audit Checklist</h3>
       <ul>
         <p>&nbsp;</p>
+<div style="text-align: left;">
 <ul>
 <li data-start="6043" data-end="6095">
 <p data-start="6045" data-end="6095">Market segmentation by region (ANZ, UK, Europe).</p>
@@ -416,6 +417,7 @@
 <p data-start="6429" data-end="6474">Product marketing and releases &rarr; alignment.</p>
 </li>
 </ul>
+</div>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
       </ul>
@@ -429,6 +431,7 @@
       <p>
         <p>&nbsp;</p>
 <ul>
+<div style="text-align: left;">
 <li data-start="6043" data-end="6095">
 <p data-start="6515" data-end="6527">At the core:</p>
 <ul data-start="6529" data-end="6934">
@@ -454,6 +457,7 @@
 <p data-start="6895" data-end="6934"><strong data-start="6895" data-end="6924">AI-driven personalisation</strong> for scale</p>
 </li>
 </ul>
+</div>
 <p data-start="6936" data-end="7013">All wrapped into a unified, end-to-end <strong data-start="6975" data-end="7012">Global Marketing Operating System</strong>.</p>
 </li>
 </ul>
@@ -469,6 +473,7 @@
       <h3>Execution Cadence</h3>
       <p>
         <p>&nbsp;</p>
+<div style="text-align: left;">
 <ul>
 <li data-start="6043" data-end="6095">
 <p data-start="7052" data-end="7065"><strong data-start="7052" data-end="7063">Weekly:</strong></p>
@@ -486,8 +491,9 @@
 <p data-start="7160" data-end="7196">Content sync + narrative alignment</p>
 </li>
 </ul>
+</div>
 <p data-start="7198" data-end="7212"><strong data-start="7198" data-end="7210">Monthly:</strong></p>
-<ul data-start="7213" data-end="7309">
+<ul data-start="7213" data-end="7309"> <div style="text-align: left;">
 <li data-start="7213" data-end="7248">
 <p data-start="7215" data-end="7248">Pipeline health review with CEO</p>
 </li>
@@ -496,7 +502,7 @@
 </li>
 <li data-start="7284" data-end="7309">
 <p data-start="7286" data-end="7309">Paid efficiency audit</p>
-</li>
+</li></div>
 </ul>
 <p data-start="7311" data-end="7327"><strong data-start="7311" data-end="7325">Quarterly:</strong></p>
 <ul data-start="7328" data-end="7422">
