--- a/index.html
+++ b/index.html
@@ -328,33 +328,48 @@
       </div>
     </section>
 
-    <!-- ===================== CONTACT / SECTION 6 ===================== -->
-    <section id="contact" class="page-section contact-section" data-bg="assets/backgrounds/bg-06.jpg">
-      <img src="assets/foregrounds/fg-06.png" alt="" class="fg-image fg-image-right">
+   <!-- ===================== CONTACT / SECTION 6 ===================== -->
+<section id="contact" class="page-section contact-section" data-bg="assets/backgrounds/bg-06.jpg">
+  <img src="assets/foregrounds/fg-06.png" alt="" class="fg-image fg-image-right">
 
-      <div class="container contact-inner">
-        <div>
-          <p class="eyebrow">Next Steps</p>
-          <h2>Let’s Talk Through This Live</h2>
-          <p class="section-intro">
-            I’d be happy to walk you through this blueprint, stress-test assumptions, and adapt it with your
-            leadership team.
-          </p>
-        </div>
-        <div class="contact-actions">
-          <a href="mailto:ajitpalsingh.hmh@gmail.com" class="btn primary">
-            Email Me About This Role
-          <a href="https://www.linkedin.com/in/ajitpalsinghcmo" 
-   class="btn ghost" 
-   target="_blank" 
-   rel="noopener noreferrer">
-  View My LinkedIn Profile
-</a>
+  <div class="container contact-inner">
+    <div>
+      <p class="eyebrow">Next Steps</p>
+      <h2>Let’s Talk Through This Live</h2>
+      <p class="section-intro">
+        I’d be happy to walk you through this blueprint, stress-test assumptions, 
+        and adapt it with your leadership team.
+      </p>
+    </div>
 
-        </div>
-      </div>
-    </section>
-  </main>
+    <div class="contact-actions">
+
+      <!-- Email Button -->
+      <a href="mailto:ajitpalsingh.hmh@gmail.com" 
+         class="btn primary">
+        Email Me About This Role
+      </a>
+
+      <!-- LinkedIn Button -->
+      <a href="https://www.linkedin.com/in/ajitpalsinghcmo" 
+         class="btn ghost" 
+         target="_blank" 
+         rel="noopener noreferrer">
+        View My LinkedIn Profile
+      </a>
+
+      <!-- WhatsApp Button -->
+      <a href="https://wa.me/60125652906" 
+         class="btn ghost" 
+         target="_blank" 
+         rel="noopener noreferrer">
+        WhatsApp Me Directly
+      </a>
+
+    </div>
+  </div>
+</section>
+
 
  
   <!-- ===================== MODALS ===================== -->
